--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,7 +1,7 @@
 builds:
-- id: krew-release-bot
+- id: devctl-release-bot
   main: ./cmd/action/
-  binary: krew-release-bot
+  binary: devctl-release-bot
   env:
   - CGO_ENABLED=0
   goos:
@@ -12,7 +12,7 @@ builds:
 
 archives:
 - builds:
-  - krew-release-bot
+  - devctl-release-bot
   name_template: "{{ .ProjectName }}_{{ .Tag }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
   wrap_in_directory: false
   format: tar.gz
