--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   functions = "functions"
   publish = "dist"
 [build.environment]
-  GO_IMPORT_PATH = "github.com/rajatjindal/krew-release-bot"
+  GO_IMPORT_PATH = "github.com/alex-held/devctl-release-bot"
 
 [[redirects]]
   from = "/github-action-webhook"
@@ -14,10 +14,10 @@
 # All deploys generated from a pull/merge request
 # will inherit these settings.
 [context.deploy-preview.environment]
-  UPSTREAM_KREW_INDEX_REPO_OWNER = "rajatjin"
+  UPSTREAM_DEVCTL_INDEX_REPO_OWNER = "alex-held"
 
 # Branch deploy context:
 # All deploys that are not from a pull/merge request
 # or from the production branch will inherit these settings.
 [context.branch-deploy.environment]
-  UPSTREAM_KREW_INDEX_REPO_OWNER = "rajatjin"
+  UPSTREAM_DEVCTL_INDEX_REPO_OWNER = "alex-held"
