--- a/examples/circleci.yml
+++ b/examples/circleci.yml
@@ -1,28 +1,28 @@
 version: 2
 
 jobs:
-  update-krew-index:
+  update-devctl-index:
     docker:
       - image: circleci/golang:1.16
         environment:
-          ## KREW_RELEASE_BOT_WEBHOOK_URL env helps you test your setup without actually publishing to kubernetes-sigs/krew-index
+          ## KREW_RELEASE_BOT_WEBHOOK_URL env helps you test your setup without actually publishing to kubernetes-sigs/devctl-index
           ## remove this env when you are ready for real release
 
-          KREW_RELEASE_BOT_WEBHOOK_URL: https://krew-release-bot-dryrun.rajatjindal.com/github-action-webhook
+          KREW_RELEASE_BOT_WEBHOOK_URL: https://devctl-release-bot-dryrun.rajatjindal.com/github-action-webhook
           KREW_RELEASE_BOT_VERSION: v0.0.40
     steps:
       - checkout
       - run: |
-          echo "using krew-release-bot version ${KREW_RELEASE_BOT_VERSION}"
-          curl -LO https://github.com/rajatjindal/krew-release-bot/releases/download/${KREW_RELEASE_BOT_VERSION}/krew-release-bot_${KREW_RELEASE_BOT_VERSION}_linux_amd64.tar.gz
-          tar -xvf krew-release-bot_${KREW_RELEASE_BOT_VERSION}_linux_amd64.tar.gz
-      - run: ./krew-release-bot action
+          echo "using devctl-release-bot version ${KREW_RELEASE_BOT_VERSION}"
+          curl -LO https://github.com/alex-held/devctl-release-bot/releases/download/${KREW_RELEASE_BOT_VERSION}/devctl-release-bot_${KREW_RELEASE_BOT_VERSION}_linux_amd64.tar.gz
+          tar -xvf devctl-release-bot_${KREW_RELEASE_BOT_VERSION}_linux_amd64.tar.gz
+      - run: ./devctl-release-bot action
 
 workflows:
   version: 2
   main:
     jobs:
-      - update-krew-index:
+      - update-devctl-index:
           filters:
             branches:
               ignore: /.*/
