--- a/examples/travis.yml
+++ b/examples/travis.yml
@@ -1,14 +1,14 @@
 if: tag IS present
 
-## Following env helps you test your setup without actually publishing to kubernetes-sigs/krew-index
+## Following env helps you test your setup without actually publishing to kubernetes-sigs/devctl-index
 ## remove this env when you are ready for real release
 env:
-  - KREW_RELEASE_BOT_WEBHOOK_URL=https://krew-release-bot-dryrun.rajatjindal.com/github-action-webhook
+  - KREW_RELEASE_BOT_WEBHOOK_URL=https://devctl-release-bot-dryrun.rajatjindal.com/github-action-webhook
 
 sudo: false
 
 script:
-  - curl -LO https://github.com/rajatjindal/krew-release-bot/releases/download/v0.0.40/krew-release-bot_v0.0.40_linux_amd64.tar.gz
-  - tar -xvf krew-release-bot_v0.0.40_linux_amd64.tar.gz
+  - curl -LO https://github.com/alex-held/devctl-release-bot/releases/download/v0.0.40/devctl-release-bot_v0.0.40_linux_amd64.tar.gz
+  - tar -xvf devctl-release-bot_v0.0.40_linux_amd64.tar.gz
   - printenv && pwd && ls -ltr
-  - ./krew-release-bot action
+  - ./devctl-release-bot action
