--- a/pkg/source/data/needs-6-space-indentation.yaml
+++ b/pkg/source/data/needs-6-space-indentation.yaml
@@ -1,17 +1,17 @@
 ---
-apiVersion: krew.googlecontainertools.github.com/v1alpha2
+apiVersion: devctl.googlecontainertools.github.com/v1alpha2
 kind: Plugin
 metadata:
     name: whoami
 spec:
     version: {{ .TagName }}
-    homepage: https://github.com/rajatjindal/kubectl-whoami
+    homepage: https://github.com/alex-held/kubectl-whoami
     platforms:
     - selector:
         matchLabels:
         os: darwin
         arch: amd64
-      {{addURIAndSha "https://github.com/rajatjindal/kubectl-whoami/releases/download/{{ .TagName }}/kubectl-whoami_{{ .TagName }}_darwin_amd64.tar.gz" .TagName | indent 6 }}
+      {{addURIAndSha "https://github.com/alex-held/kubectl-whoami/releases/download/{{ .TagName }}/kubectl-whoami_{{ .TagName }}_darwin_amd64.tar.gz" .TagName | indent 6 }}
       files:
       - from: "*"
         to: "."
