--- a/pkg/source/data/line-start-with-dash.yaml
+++ b/pkg/source/data/line-start-with-dash.yaml
@@ -1,13 +1,13 @@
 ---
-apiVersion: devctl.googlecontainertools.github.com/v1alpha2
+apiVersion: alexheld.io/devctl/v1alpha1
 kind: Plugin
 metadata:
   name: whoami
 spec:
   version: {{ .TagName }}
-  homepage: https://github.com/alex-held/kubectl-whoami
+  homepage: https://github.com/rajatjindal/kubectl-whoami
   platforms:
-  - {{addURIAndSha "https://github.com/alex-held/kubectl-whoami/releases/download/{{ .TagName }}/kubectl-whoami_{{ .TagName }}_darwin_amd64.tar.gz" .TagName }}
+  - {{addURIAndSha "https://github.com/rajatjindal/kubectl-whoami/releases/download/{{ .TagName }}/kubectl-whoami_{{ .TagName }}_darwin_amd64.tar.gz" .TagName }}
     selector:
       matchLabels:
         os: darwin
