--- a/pkg/source/data/needs-4-space-indentation.yaml
+++ b/pkg/source/data/needs-4-space-indentation.yaml
@@ -1,17 +1,17 @@
 ---
-apiVersion: devctl.googlecontainertools.github.com/v1alpha2
+apiVersion: alexheld.io/devctl/v1alpha1
 kind: Plugin
 metadata:
   name: whoami
 spec:
   version: {{ .TagName }}
-  homepage: https://github.com/alex-held/kubectl-whoami
+  homepage: https://github.com/rajatjindal/kubectl-whoami
   platforms:
   - selector:
       matchLabels:
         os: darwin
         arch: amd64
-    {{addURIAndSha "https://github.com/alex-held/kubectl-whoami/releases/download/{{ .TagName }}/kubectl-whoami_{{ .TagName }}_darwin_amd64.tar.gz" .TagName }}
+    {{addURIAndSha "https://github.com/rajatjindal/kubectl-whoami/releases/download/{{ .TagName }}/kubectl-whoami_{{ .TagName }}_darwin_amd64.tar.gz" .TagName }}
     files:
     - from: "*"
         to: "."
